--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+restartd (0.2.4-1) unstable; urgency=low
+
+  * [debian/rules]:
+   - Enable hardening options via DPKG_EXPORT_BUILDFLAGS and buildflags.mk
+  * [debian/control]:
+   - Added duilb-depends on dpkg-dev (>= 1.16.1~)
+
+ -- Alexandre Raymond <alexandre.j.raymond@gmail.com>  Sun, 13 Jan 2013 15:58:25 -0500
+
 restartd (0.2.3-1) unstable; urgency=low
 
   * Project moved out of Debian as the scope is now broader.
